# binaryrs

binary/: Cargo.toml
binary/src/: attr.rs  de.rs  error.rs  impls.rs  lib.rs  ser.rs  stream_rw.rs
binary/tests/: binary.rs
binary_derive/: Cargo.toml
binary_derive/src/: context.rs  helpers.rs  lib.rs
