[package]
name = "binary_derive"
version = "0.1.0"
authors = ["GinjaNinja32 <ginjaninja32@gmail.com>"]
edition = "2018"

[lib]
name = "binary_derive"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug_prints = []

[dependencies]
"syn" = { version = "0.15", features = ["extra-traits"] }
"quote" = "0.6"
